--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.379.0",
